# LinearAlgebraCalSys

./: .gitignore  API_DOCUMENTATION.md  CMakeLists.txt  PROJECT_PLAN.md  README.md
src/: algebra_operation.cpp  algebra_operation.h  determinant_expansion.cpp  determinant_expansion.h  equationset.cpp  equationset.h  fraction.cpp  fraction.h  main.cpp  matrix.cpp  matrix.h  matrix_operations.cpp  matrix_operations.h  operation_step.cpp  operation_step.h  rebel.txt  result.cpp  result.h  similar_matrix_operations.cpp  similar_matrix_operations.h  vector.cpp  vector.h  vectorset_operation.cpp  vectorset_operation.h
src/algebra/: equation.cpp  equation.h  monomial.cpp  monomial.h  polynomial.cpp  polynomial.h  polynomial_matrix.cpp  polynomial_matrix.h  polynomial_solve.cpp  radical.cpp  radical.h
src/grammar/: grammar_interpreter.cpp  grammar_interpreter.h  grammar_interpreter_file.cpp  grammar_parser.cpp  grammar_parser.h  grammar_token.h  grammar_tokenizer.cpp  grammar_tokenizer.h
src/tui/: enhanced_help_viewer.cpp  enhanced_help_viewer.h  enhanced_matrix_editor.cpp  enhanced_matrix_editor.h  enhanced_variable_viewer.cpp  enhanced_variable_viewer.h  startup_screen.cpp  startup_screen.h  tui_app.cpp  tui_app.h  tui_commands.cpp  tui_core.cpp  tui_input.cpp  tui_step_mode.cpp  tui_suggestion_box.cpp  tui_suggestion_box.h  tui_terminal.cpp  tui_terminal.h  tui_utils.cpp
src/utils/: convert_utils.cpp  convert_utils.h  logger.cpp  logger.h  tui_utils.cpp  tui_utils.h
test/: test_phase1.cpp  test_phase2.cpp  test_phase3.cpp  test_phase4.cpp  test_phase5.cpp
